--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "babel-plugin-component": "^1.1.1",
     "element-ui": "^2.8.2",
     "node-sass": "^4.12.0",
+    "quill": "^1.3.6",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
