--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
     "babel-plugin-component": "^1.1.1",
     "element-ui": "^2.8.2",
+    "md5": "^2.2.1",
     "node-sass": "^4.12.0",
     "quill": "^1.3.6",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "we-vue": "^2.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
